Changed background style and added greeting animation and text

--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css-bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+          integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
 
-    <title>DZEN</title>
+    <title>dZen</title>
 </head>
 
 <body>
 
-    <div class="main">
-        <img src="images/povtorka.png" alt="" id="povtorka">
+<div class="main">
+    <div class="greeting">
+        <h1>Welcome to the project dZen!</h1>
+        <h2>Press any key</h2>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!--<script src="js/jquery-3.3.1.min.js"></script>-->
-    <!--<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>-->
-    <script src="js/anime.min.js"></script>
-    <script src="js/main.js"></script>
+    <img src="images/povtorka.png" alt="" id="povtorka">
+</div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!--<script src="js/jquery-3.3.1.min.js"></script>-->
+<!--<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>-->
+<script src="js/anime.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/greeting.js"></script>
 </body>
 
 </html>
