Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -14,25 +14,22 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
 
-    <title>dZen</title>
+    <title>DZEN - beats of IoT</title>
 </head>
 
 <body>
 
-<div class="main">
-    <div class="greeting">
-        <h1>Welcome to the project dZen!</h1>
-        <h2>Press any key</h2>
+    <div class="main">
+        <img src="images/povtorka.png" alt="" id="povtorka">
+        <img src="images/scream.png" alt="" id="scream">
     </div>
-    <img src="images/povtorka.png" alt="" id="povtorka">
-</div>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--<script src="js/jquery-3.3.1.min.js"></script>-->
-<!--<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>-->
-<script src="js/anime.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/greeting.js"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!--<script src="js/jquery-3.3.1.min.js"></script>-->
+    <!--<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>-->
+    <script src="js/anime.min.js"></script>
+    <script src="js/howler.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
